# silenced_web

./: .gitignore
SilencedWebServer/: .editorconfig  README.md  SilencedWebServer.sln
SilencedWebServer/DesktopTool/: DesktopTool.csproj  DesktopToolController.cs
SilencedWebServer/Main/: ControllerFilters.cs  Main.csproj  Program.cs  README.md
SilencedWebServer/Main/Properties/: launchSettings.json
SilencedWebServer/Sys_Common/: Filter.cs  Sys_Common.csproj
SilencedWebServer/Sys_Pgsql/: DeskTopTool.cs  PgContext.cs  Program.cs  Sys_Pgsql.csproj
SilencedWebServer/Sys_Pgsql/Migrations/: 20220628135655_Initial.Designer.cs  20220628135655_Initial.cs  PgContextModelSnapshot.cs
SilencedWebServer/Test/: Test.csproj  TestController.cs
SilencedWebSocket/: CMakeLists.txt  main.cpp  net_commn.h  zyy_netcommon.h
